# darmstadt-opendata-exporter

./: LICENSE  README.md  dashboard.json  pyproject.toml
darmstadt_opendata_exporter/: __main__.py
