[tool.poetry]
name = "darmstadt-opendata-exporter"
version = "0.1.0"
description = "Export Darmstadt's Open Data Plattform in the OpenMetrics format"
authors = ["Martin Weinelt"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
prometheus-client = "^0.11.0"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
